--- a/styles/bootstrap-overrides.css
+++ b/styles/bootstrap-overrides.css
@@ -15,3 +15,8 @@
 .inline-highlight-typos {
   background: rgb(255,200,200);
 }
+
+.apexcharts-canvas {
+  margin-left: auto;
+  margin-right: auto;
+}
