new modal style

--- a/styles/bootstrap-overrides.css
+++ b/styles/bootstrap-overrides.css
@@ -20,3 +20,28 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.modal-header {
+  background-color: #26539B;
+  color: white;
+}
+
+.modal-header .close {
+  color: white;
+}
+
+.modal-header .close:hover {
+  color: white !important;
+}
+
+.modal-body {
+  background-color: #f9fafc;
+}
+
+.modal-footer {
+  background-color: #f9fafc;
+}
+
+body {
+  background-color: #f9fafc;
+}
